[workspace]
members = [
    # "programs/*"
    "programs/voting",
    "programs/spl_token",
    "programs/count_increment",
    "programs/guess_random_number",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
