[package]
name = "spl_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"  # 确保版本匹配
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token"
path = "src/lib.rs"

